# d3dmesh-to-gltf

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: build-release.yml
changelogs/: v0.1.0.md  v0.2.0.md
src/: byte_reading.rs  checksum_mapping.rs  logging.rs  main.rs  runtime_config.rs
src/d3dmesh/: header.rs  materials.rs  mesh.rs  mod.rs  polygons.rs  textures.rs
src/d3dtx/: bcn_image.rs  mod.rs
src/export/: mod.rs  rigged_object.rs  writer.rs
src/image_conversion/: height.rs  mod.rs  sampler.rs
src/skeleton/: mod.rs
